# reweave

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  design-qa.md  pyproject.toml
docs/: BYOK_SETUP_BENCHMARK.md  insight-performance.md  pipeline.md  prompt-automation.md  search-insight-benchmark.md  validation-guide.md
evals/promptfoo/: promptfooconfig.base.yaml  promptfooconfig.stage-extraction.yaml  promptfooconfig.stage-linking.yaml  promptfooconfig.stage-segmentation.yaml  promptfooconfig.stage-synthesis.yaml  promptfooconfig.stage-validation.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: MarkdownContent.tsx  Workspace.tsx  main.tsx  sanity.test.ts  styles.css  textHighlight.tsx
packaging/: reweave_desktop.py
src/reweave/: __init__.py  archive.py  cli.py  config.py  desktop.py  insights.py  llm.py  llm_profiles.py  paths.py  web.py
src/reweave/models/: __init__.py
src/reweave/parsers/: base.py  chatgpt.py  claude.py  detector.py
src/sbs/: __init__.py  cli.py  config.py
src/sbs/agents/: base.py  extraction.py  linking.py  segmentation.py  synthesis.py  validation.py
src/sbs/evals/: __init__.py  dataset_builder.py  promptfoo.py  tracker.py  tuner.py
src/sbs/llm/: client.py  cost.py  prompts.py
src/sbs/llm/providers/: anthropic.py  google.py  google_quota.py  openai.py
src/sbs/models/: __init__.py  conversation.py  evals.py  extraction.py  note.py  pipeline.py  segment.py
src/sbs/output/: naming.py  templates.py  writer.py
src/sbs/parsers/: base.py  chatgpt.py  claude.py  detector.py
src/sbs/pipeline/: checkpoint.py  progress.py  runner.py
src/sbs/prompting/: __init__.py  registry.py
tests/: conftest.py  test_agents.py  test_archive.py  test_cli.py  test_eval_tuner.py  test_evals.py  test_google_provider.py  test_insights.py  test_llm.py  test_models.py  test_output.py  test_parsers.py  test_pipeline.py  test_prompting.py  test_web.py
tests/fixtures/: chatgpt_sample.json  claude_sample.json
