[project]
name = "reweave"
version = "0.1.0"
description = "Local search app for AI conversation exports with source-grounded insights"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "platformdirs>=4.0.0",
    "pywebview>=5.0",
    "python-multipart>=0.0.9",
    "typer>=0.15.0",
    "uvicorn>=0.32.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "keyring>=25.7.0",
]

[project.scripts]
reweave = "reweave.cli:app"
reweave-desktop = "reweave.desktop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reweave"]

[tool.hatch.build.targets.wheel.force-include]
"src/reweave/web/dist" = "reweave/web/dist"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
